# poh-kit

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  vitest.config.ts
assets/: README.md
contracts/evm/: VERIFY.md  hardhat.config.ts
contracts/evm/contracts/: IdentityRegistry.sol
contracts/evm/test/: Attestations.test.ts  IdentityCommitments.test.ts  IdentityRegistry.test.ts
contracts/solana/: Anchor.toml  Cargo.toml  README.md
contracts/solana/programs/attestations/: Cargo.toml
contracts/solana/programs/attestations/src/: lib.rs
contracts/solana/programs/identity-commitments/: Cargo.toml
contracts/solana/programs/identity-commitments/src/: lib.rs
contracts/solana/programs/identity-registry/: Cargo.toml
contracts/solana/programs/identity-registry/src/: lib.rs
docs/: architecture.md
docs/api/: poh-verification-api.yaml
examples/evm-hardhat/: README.md  hardhat.config.ts
