[package]
name = "identity-registry"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foundation-vote/poh-kit"

[lib]
crate-type = ["cdylib", "lib"]
name = "identity_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
